# cgns-rust

./: Cargo.toml  README.md  get_loaded_connectivity.patch
.github/workflows/: pr-tests.yaml
cgns-rust/: Cargo.toml
cgns-rust/.cargo/: config.toml
cgns-rust/src/: errors.rs  file.rs  lib.rs  library.rs  main.rs  traits.rs  utils.rs
cgns-rust/src/file/: base.rs  mod.rs
cgns-rust/src/file/base/: mod.rs  zone.rs
cgns-rust/src/file/base/zone/: arbitrary_grid_motion.rs  boundary_conditions.rs  elements.rs  flow_solution.rs  grid_coordinate.rs  mod.rs  rigid_grid_motion.rs  section.rs  zone_grid_connectivity.rs
cgns-rust/src/file/base/zone/flow_solution/: field.rs  mod.rs
cgns-rust/src/file/base/zone/grid_coordinate/: coords.rs  mod.rs
cgns-sys/: Cargo.toml  build.rs
cgns-sys/patches/: cg_poly_elements_read_zerocopy.patch  cg_section_free.patch
cgns-sys/src/: lib.rs
