[package]
authors = ["Arthur Woimbée <awoimbee@extrality.ai>"]
name = "cgns-rust"
version = "0.0.6"
edition = "2024"
description = "Wrapper around cgns-sys."
repository = "https://github.com/extrality/cgns-rust"
licensing = "MIT"

[dependencies]
cgns-sys = { path = "../cgns-sys" }
thiserror = "2.0.0"
num_enum = "0.7.0"

[dev-dependencies]
testdir = "0.10.0"
